--- a/registerapp/src/app/app.component.html
+++ b/registerapp/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>RegisterAPP</ion-list-header>
-          <ion-note>por Cruztarger</ion-note>
+          <ion-note>por Cruztarger.cl</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
