se configura register
se configura regioster

--- a/registerapp/src/app/users/login/login.page.html
+++ b/registerapp/src/app/users/login/login.page.html
@@ -30,4 +30,10 @@
       </ion-row>
     </ion-grid>
   </form>
+
+  <div id="container">
+ 
+    <p><a target="_self" rel="noopener noreferrer" href="register" style="color: black;">Crear Cuenta</a></p>
+  </div>
+
 </ion-content>
