--- a/registerapp/src/app/users/login/login.page.html
+++ b/registerapp/src/app/users/login/login.page.html
@@ -17,15 +17,17 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
+              <ion-input name="email" type="email" placeholder="Ingrese su email" [(ngModel)]="usuario.email"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
+              <ion-input name="password" type="password" placeholder="Ingrese su clave" [(ngModel)]="usuario.password"></ion-input>
             </ion-item>
           </div>
+       
           <div padding>
-            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+            <ion-button  (click)="userslogin()" size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
           </div>
+         
         </ion-col>
       </ion-row>
     </ion-grid>
